# simple-interpreter

./: CMakeLists.txt  README.md  test.sh  test.txt  test_key.txt
src/: CMakeLists.txt  defines.h  main.c  token.c  token.h
